# fusionhash-vulkan

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  start-mining.bat  vulkminer
.github/workflows/: ci.yml
hiveos/: Dockerfile  README.md  build-linux.sh  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  package.sh
shaders/: aes.glsl  cn0.comp  cn00.comp  cn1.comp  cn2.comp  common.glsl  sctest.comp
shaders/spirv/: cn0.comp.spv  cn00.comp.spv  cn1.comp.spv  cn1_fp64.comp.spv  cn1_markstein.comp.spv  cn1_rcp.comp.spv  cn2.comp.spv  cn2_dbg.comp.spv  sctest.comp.spv  sctest_fp64.comp.spv  sctest_markstein.comp.spv
src/: aes_tables.rs  autotune.rs  cnhash.rs  config.rs  main.rs  microtest.rs  miner.rs  selftest.rs  stratum.rs  vk.rs
